--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "antd": "^5.14.2",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.6.7",
     "framer-motion": "6.0.0",
     "next": "^12.3.1",
     "postcss": "^8.4.17",
