--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "next": "^12.3.1",
     "postcss": "^8.4.17",
     "postcss-import": "^13.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.6",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
