--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "antd": "^5.14.2",
-    "autoprefixer": "^10.4.12",
     "axios": "^1.6.7",
     "framer-motion": "6.0.0",
     "next": "^12.3.1",
-    "postcss": "^8.4.17",
     "postcss-import": "^13.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,10 +21,12 @@
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.10.6",
-    "tailwindcss": "^3.1.8"
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.2"
+    "autoprefixer": "^10.4.18",
+    "babel-plugin-inline-react-svg": "^1.1.2",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
